--- a/painel_aluno.html
+++ b/painel_aluno.html
@@ -78,7 +78,8 @@
       padding: 10px;
       border: 1px solid #ddd;
       border-radius: 5px;
-      background-color: #f9f9f9;
+      background-color: transparent;
+      box-shadow: none;
     }
 
     .back-button {
