--- a/painel_professor.html
+++ b/painel_professor.html
@@ -472,7 +472,7 @@ const structure = {
   }
 };
 
-   function toggleProgress(teacherId, classId, studentId) {
+  function toggleProgress(teacherId, classId, studentId) {
   const progressContainer = document.getElementById(`progress-container-${studentId}`);
   
   if (progressContainer.style.display === 'none' || progressContainer.style.display === '') {
@@ -511,7 +511,7 @@ const structure = {
 
               const nota = unitSnap.child(`nota${phaseNumber}`).val();
               phasesHTML += `
-                <p>Phase ${phaseNumber}: ${isComplete ? 'Complete ✅' : 'Incomplete ❌'}
+                <p>Phase ${phaseNumber}: 
                   <input type="checkbox" ${isComplete ? 'checked' : ''} 
                     onchange="updatePhaseStatus('${studentId}', '${levelKey}', '${unitKey}', '${phaseKey}', this.checked)">
                 </p>`;
