--- a/painel_professor.html
+++ b/painel_professor.html
@@ -504,13 +504,11 @@ const structure = {
       if (snapshot.exists()) {
         let progressHTML = '<div class="progress-panel"><h3>Your Progress</h3>';
 
-        // Estrutura dos levels
         Object.keys(structure).forEach(levelKey => {
-          const level = levelKey.replace('Level', ''); // Remove "Level"
+          const level = levelKey.replace('Level', '');
           let totalCompletedPhases = 0;
           let totalPhasesInLevel = 0;
 
-          // Calcular o progresso do Level
           Object.keys(structure[levelKey]).forEach(unitKey => {
             const totalPhases = structure[levelKey][unitKey];
             const unitSnap = snapshot.child(`${levelKey}/${unitKey}`);
@@ -528,10 +526,8 @@ const structure = {
             totalPhasesInLevel += totalPhases;
           });
 
-          // Cálculo da porcentagem de progresso do Level
           const progressPercentage = Math.round((totalCompletedPhases / totalPhasesInLevel) * 100);
 
-          // Adicionar título do Level e a barra de progresso
           progressHTML += `<h2>Level ${level}</h2>`;
           progressHTML += `
             <div class="progress-bar-container">
@@ -541,7 +537,6 @@ const structure = {
             </div>
           `;
 
-          // Adicionar cada Unit dentro do Level
           Object.keys(structure[levelKey]).forEach(unitKey => {
             const unitId = `${levelKey}-${unitKey}`;
             const totalPhases = structure[levelKey][unitKey];
@@ -569,7 +564,6 @@ const structure = {
                     onchange="updatePhaseStatus('${studentId}', '${levelKey}', '${unitKey}', '${phaseKey}', this.checked)">
                 </p>`;
               
-              // Exibir nota e botão para apagar, se disponível
               if (nota !== null && nota !== undefined) {
                 notesHTML += `
                   <p>Your Test Score ${noteCount}: <span style="font-weight: bold; color: ${nota >= 70 ? 'blue' : 'red'};">${nota}</span>
@@ -590,8 +584,7 @@ const structure = {
             `;
           });
         });
-        
-        // Fechar a div progress-panel
+
         progressHTML += '</div>';
         progressContainer.innerHTML = progressHTML;
       } else {
