--- a/painel_professor.html
+++ b/painel_professor.html
@@ -493,7 +493,7 @@ const structure = {
   }
 };
 
-  function toggleProgress(teacherId, classId, studentId) {
+ function toggleProgress(teacherId, classId, studentId) {
   const progressContainer = document.getElementById(`progress-container-${studentId}`);
   
   if (progressContainer.style.display === 'none' || progressContainer.style.display === '') {
@@ -557,19 +557,19 @@ const structure = {
                 completedPhases++;
               }
 
-              const nota = unitSnap.child(`nota${phaseNumber}`).val();
               phasesHTML += `
                 <p>Phase ${phaseNumber}: 
                   <input type="checkbox" ${isComplete ? 'checked' : ''} 
                     onchange="updatePhaseStatus('${studentId}', '${levelKey}', '${unitKey}', '${phaseKey}', this.checked)">
                 </p>`;
-              
-              if (nota !== null && nota !== undefined) {
-                notesHTML += `
-                  <p>Your Test Score ${noteCount}: <span style="font-weight: bold; color: ${nota >= 70 ? 'blue' : 'red'};">${nota}</span>
-                  <button onclick="clearIndividualTestScore('${studentId}', '${levelKey}', '${unitKey}', 'nota${phaseNumber}')">Clear Score</button></p>`;
-                noteCount++;
-              }
+            }
+
+            // Verificar se a nota existe para a unidade e exibir se disponível
+            const nota = unitSnap.child('nota').val();
+            if (nota !== null && nota !== undefined) {
+              notesHTML += `
+                <p>Your Test Score: <span style="font-weight: bold; color: ${nota >= 70 ? 'blue' : 'red'};">${nota}</span>
+                <button onclick="clearIndividualTestScore('${studentId}', '${levelKey}', '${unitKey}', 'nota')">Clear Score</button></p>`;
             }
 
             progressHTML += `
@@ -584,7 +584,7 @@ const structure = {
             `;
           });
         });
-
+        
         progressHTML += '</div>';
         progressContainer.innerHTML = progressHTML;
       } else {
