--- a/painel_professor.html
+++ b/painel_professor.html
@@ -664,9 +664,11 @@ function toggleStudentActions(studentId) {
 function clearIndividualTestScore(studentId, levelKey, unitKey, noteKey) {
   if (confirm("Are you sure you want to clear this test score? This action cannot be undone.")) {
     const noteRef = db.ref(`usuarios/${studentId}/progresso/${levelKey}/${unitKey}/${noteKey}`);
+    
     noteRef.set(null).then(() => {
       alert("Test score has been cleared.");
-      toggleProgress(teacherId, classId, studentId); // Atualiza o progresso após apagar a nota
+      // Atualiza o progresso após apagar a nota
+      toggleProgress('', '', studentId);  // Passa um valor vazio para `teacherId` e `classId`
     }).catch(error => {
       console.error("Error clearing test score:", error);
       alert("An error occurred while clearing the test score. Please try again later.");
