--- a/painel_professor.html
+++ b/painel_professor.html
@@ -533,7 +533,7 @@ const structure = {
                     onchange="updatePhaseStatus('${studentId}', '${levelKey}', '${unitKey}', '${phaseKey}', this.checked)">
                 </p>`;
 
-              // Adicionar as notas, se existirem
+              // Adicionar todas as notas existentes para essa unidade
               let notaIndex = 1;
               while (unitSnap.child(`nota${notaIndex}`).exists()) {
                 const notaValue = unitSnap.child(`nota${notaIndex}`).val();
