--- a/painel_professor.html
+++ b/painel_professor.html
@@ -532,16 +532,17 @@ const structure = {
                   <input type="checkbox" ${isComplete ? 'checked' : ''} 
                     onchange="updatePhaseStatus('${studentId}', '${levelKey}', '${unitKey}', '${phaseKey}', this.checked)">
                 </p>`;
+            }
 
-              // Adicionar todas as notas existentes para essa unidade
-              let notaIndex = 1;
-              while (unitSnap.child(`nota${notaIndex}`).exists()) {
-                const notaValue = unitSnap.child(`nota${notaIndex}`).val();
-                notesHTML += `
-                  <p>Your Test Score ${notaIndex}: <span style="font-weight: bold; color: ${notaValue >= 70 ? 'blue' : 'red'};">${notaValue}</span>
-                  <button onclick="clearIndividualTestScore('${studentId}', '${levelKey}', '${unitKey}', 'nota${notaIndex}')">Clear Score</button></p>`;
-                notaIndex++;
-              }
+            // Loop para exibir todas as notas
+            let notaIndex = 0;
+            while (unitSnap.child(`nota${notaIndex}`).exists()) {
+              const notaValue = unitSnap.child(`nota${notaIndex}`).val();
+              notesHTML += `
+                <p>Your Test Score ${noteCount}: <span style="font-weight: bold; color: ${notaValue >= 70 ? 'blue' : 'red'};">${notaValue}</span>
+                <button onclick="clearIndividualTestScore('${studentId}', '${levelKey}', '${unitKey}', 'nota${notaIndex}')">Clear Score</button></p>`;
+              notaIndex++;
+              noteCount++;
             }
 
             totalPhasesInLevel += totalPhases;
