--- a/painel_professor.html
+++ b/painel_professor.html
@@ -534,16 +534,16 @@ const structure = {
                 </p>`;
             }
 
-            // Loop para exibir todas as notas
-            let notaIndex = 0;
-            while (unitSnap.child(`nota${notaIndex}`).exists()) {
-              const notaValue = unitSnap.child(`nota${notaIndex}`).val();
-              notesHTML += `
-                <p>Your Test Score ${noteCount}: <span style="font-weight: bold; color: ${notaValue >= 70 ? 'blue' : 'red'};">${notaValue}</span>
-                <button onclick="clearIndividualTestScore('${studentId}', '${levelKey}', '${unitKey}', 'nota${notaIndex}')">Clear Score</button></p>`;
-              notaIndex++;
-              noteCount++;
-            }
+            // Adicionar as notas, se existirem, verificando todas as chaves que começam com "nota"
+            unitSnap.forEach(childSnap => {
+              if (childSnap.key.startsWith('nota')) {
+                const notaValue = childSnap.val();
+                notesHTML += `
+                  <p>Your Test Score ${noteCount}: <span style="font-weight: bold; color: ${notaValue >= 70 ? 'blue' : 'red'};">${notaValue}</span>
+                  <button onclick="clearIndividualTestScore('${studentId}', '${levelKey}', '${unitKey}', '${childSnap.key}')">Clear Score</button></p>`;
+                noteCount++;
+              }
+            });
 
             totalPhasesInLevel += totalPhases;
 
