--- a/painel_professor.html
+++ b/painel_professor.html
@@ -502,13 +502,18 @@ const structure = {
 
     db.ref(`usuarios/${studentId}/progresso`).once('value', snapshot => {
       if (snapshot.exists()) {
-        let progressHTML = '<div class="progress-panel"><h3>Your Progress</h3>';
+        let progressHTML = '';
 
+        // Percorrer cada nível (Level1, Level2, etc.)
         Object.keys(structure).forEach(levelKey => {
           const level = levelKey.replace('Level', '');
           let totalCompletedPhases = 0;
           let totalPhasesInLevel = 0;
 
+          // Adiciona o título do nível
+          progressHTML += `<h3>LEVEL ${level}</h3>`;
+
+          // Calcula e adiciona a barra de progresso do nível
           Object.keys(structure[levelKey]).forEach(unitKey => {
             const totalPhases = structure[levelKey][unitKey];
             const unitSnap = snapshot.child(`${levelKey}/${unitKey}`);
@@ -534,31 +539,22 @@ const structure = {
                 </p>`;
             }
 
-            // Adicionar as notas, se existirem, verificando todas as chaves que começam com "nota"
-            unitSnap.forEach(childSnap => {
-              if (childSnap.key.startsWith('nota')) {
-                const notaValue = childSnap.val();
-                notesHTML += `
-                  <p>Your Test Score ${noteCount}: <span style="font-weight: bold; color: ${notaValue >= 70 ? 'blue' : 'red'};">${notaValue}</span>
-                  <button onclick="clearIndividualTestScore('${studentId}', '${levelKey}', '${unitKey}', '${childSnap.key}')">Clear Score</button></p>`;
-                noteCount++;
-              }
-            });
+            // Loop para exibir todas as notas
+            let notaIndex = 0;
+            while (unitSnap.child(`nota${notaIndex}`).exists()) {
+              const notaValue = unitSnap.child(`nota${notaIndex}`).val();
+              notesHTML += `
+                <p>Your Test Score ${noteCount}: <span style="font-weight: bold; color: ${notaValue >= 70 ? 'blue' : 'red'};">${notaValue}</span>
+                <button onclick="clearIndividualTestScore('${studentId}', '${levelKey}', '${unitKey}', 'nota${notaIndex}')">Clear Score</button></p>`;
+              notaIndex++;
+              noteCount++;
+            }
 
             totalPhasesInLevel += totalPhases;
-
-            progressHTML += `
-              <div>
-                <button onclick="toggleVisibility('${studentId}-${unitKey}')">Unit ${unitKey.replace('Unit', '')}</button>
-                <div id="${studentId}-${unitKey}" style="display: none; margin-left: 20px;">
-                  <p>${completedPhases}/${totalPhases} phases completed</p>
-                  ${phasesHTML}
-                  ${notesHTML || '<p>No scores available</p>'}
-                </div>
-              </div>
-            `;
+            totalCompletedPhases += completedPhases;
           });
 
+          // Calcula e adiciona o progresso do nível
           const progressPercentage = Math.round((totalCompletedPhases / totalPhasesInLevel) * 100);
           progressHTML += `
             <div>
@@ -568,11 +564,20 @@ const structure = {
                   <span style="position: absolute; color: white; padding-left: 5px;">${progressPercentage}%</span>
                 </div>
               </div>
-            </div>
-          `;
+            </div>`;
+
+          // Adiciona os botões das unidades do nível abaixo da barra de progresso
+          Object.keys(structure[levelKey]).forEach(unitKey => {
+            progressHTML += `
+              <div>
+                <button onclick="toggleVisibility('${studentId}-${unitKey}')">Unit ${unitKey.replace('Unit', '')}</button>
+                <div id="${studentId}-${unitKey}" style="display: none; margin-left: 20px;">
+                  ${notesHTML || '<p>No scores available</p>'}
+                </div>
+              </div>`;
+          });
         });
-        
-        progressHTML += '</div>';
+
         progressContainer.innerHTML = progressHTML;
       } else {
         progressContainer.innerHTML = '<div class="progress-panel"><p>No progress data available.</p></div>';
