--- a/painel_professor.html
+++ b/painel_professor.html
@@ -496,10 +496,12 @@ const structure = {
 function toggleProgress(teacherId, classId, studentId) {
   const progressContainer = document.getElementById(`progress-container-${studentId}`);
   
-  // Verificar se o contêiner de progresso está oculto ou visível
   if (progressContainer.style.display === 'none' || progressContainer.style.display === '') {
     progressContainer.style.display = 'block';
     progressContainer.innerHTML = '<p>Loading...</p>';
+
+    // Adicionando um log para verificar se a função foi chamada corretamente
+    console.log(`Carregando progresso para o aluno ID: ${studentId}`);
 
     // Consultar o progresso do aluno no banco de dados
     db.ref(`usuarios/${studentId}/progresso`).once('value', snapshot => {
@@ -556,7 +558,6 @@ function toggleProgress(teacherId, classId, studentId) {
             totalCompletedPhases += completedPhases;
           });
 
-          // Calcular e exibir o progresso do nível
           const progressPercentage = Math.round((totalCompletedPhases / totalPhasesInLevel) * 100);
           progressHTML += `
             <div>
@@ -568,7 +569,6 @@ function toggleProgress(teacherId, classId, studentId) {
               </div>
             </div>`;
 
-          // Adicionar os botões das unidades do nível
           Object.keys(structure[levelKey]).forEach(unitKey => {
             progressHTML += `
               <div>
@@ -582,8 +582,10 @@ function toggleProgress(teacherId, classId, studentId) {
         });
 
         progressContainer.innerHTML = progressHTML;
+        console.log(`Progresso carregado para o aluno ID: ${studentId}`);
       } else {
         progressContainer.innerHTML = '<div class="progress-panel"><p>No progress data available.</p></div>';
+        console.log(`Nenhum dado de progresso disponível para o aluno ID: ${studentId}`);
       }
     }).catch(error => {
       console.error("Error loading progress:", error);
