--- a/painel_professor.html
+++ b/painel_professor.html
@@ -500,10 +500,9 @@ function toggleProgress(teacherId, classId, studentId) {
     progressContainer.style.display = 'block';
     progressContainer.innerHTML = '<p>Loading...</p>';
 
-    // Adicionando um log para verificar se a função foi chamada corretamente
+    // Log para verificar o início do carregamento
     console.log(`Carregando progresso para o aluno ID: ${studentId}`);
 
-    // Consultar o progresso do aluno no banco de dados
     db.ref(`usuarios/${studentId}/progresso`).once('value', snapshot => {
       if (snapshot.exists()) {
         let progressHTML = '';
@@ -543,7 +542,6 @@ function toggleProgress(teacherId, classId, studentId) {
                 </p>`;
             }
 
-            // Exibir todas as notas
             let notaIndex = 0;
             while (unitSnap.child(`nota${notaIndex}`).exists()) {
               const notaValue = unitSnap.child(`nota${notaIndex}`).val();
