--- a/painel_professor.html
+++ b/painel_professor.html
@@ -502,23 +502,27 @@ function toggleProgress(teacherId, classId, studentId) {
 
     console.log(`Carregando progresso para o aluno ID: ${studentId}`);
 
+    // Consultar o progresso do aluno no banco de dados
     db.ref(`usuarios/${studentId}/progresso`).once('value', snapshot => {
       if (snapshot.exists()) {
         let progressHTML = '';
 
+        // Iterar pelos níveis e unidades configurados na estrutura
         Object.keys(structure).forEach(levelKey => {
           const level = levelKey.replace('Level', '');
           let totalCompletedPhases = 0;
           let totalPhasesInLevel = 0;
 
+          // Adicionar o título do nível
           progressHTML += `<h3>LEVEL ${level}</h3>`;
 
+          // Calcular a porcentagem de progresso do nível
           Object.keys(structure[levelKey]).forEach(unitKey => {
             const totalPhases = structure[levelKey][unitKey];
             const unitSnap = snapshot.child(`${levelKey}/${unitKey}`);
             
             let completedPhases = 0;
-            let phasesHTML = '';  // Inicializa phasesHTML corretamente
+            let phasesHTML = '';
             let notesHTML = '';
             let noteCount = 1;
 
@@ -538,6 +542,7 @@ function toggleProgress(teacherId, classId, studentId) {
                 </p>`;
             }
 
+            // Exibir todas as notas
             let notaIndex = 0;
             while (unitSnap.child(`nota${notaIndex}`).exists()) {
               const notaValue = unitSnap.child(`nota${notaIndex}`).val();
@@ -561,6 +566,7 @@ function toggleProgress(teacherId, classId, studentId) {
               </div>`;
           });
 
+          // Barra de progresso para o nível
           const progressPercentage = Math.round((totalCompletedPhases / totalPhasesInLevel) * 100);
           progressHTML += `
             <div>
