--- a/painel_professor.html
+++ b/painel_professor.html
@@ -516,7 +516,10 @@ function toggleProgress(teacherId, classId, studentId) {
           // Adicionar o título do nível
           progressHTML += `<h3>LEVEL ${level}</h3>`;
 
-          // Calcular a porcentagem de progresso do nível
+          // Barra de progresso do nível
+          const levelProgressContainer = document.createElement('div');
+          const levelProgressPercentage = document.createElement('p');
+
           Object.keys(structure[levelKey]).forEach(unitKey => {
             const totalPhases = structure[levelKey][unitKey];
             const unitSnap = snapshot.child(`${levelKey}/${unitKey}`);
@@ -526,6 +529,7 @@ function toggleProgress(teacherId, classId, studentId) {
             let notesHTML = '';
             let noteCount = 1;
 
+            // Iterar pelas fases e verificar se estão completas
             for (let phaseNumber = 1; phaseNumber <= totalPhases; phaseNumber++) {
               const phaseKey = `fase${phaseNumber}`;
               const phaseSnap = unitSnap.child(phaseKey);
@@ -542,7 +546,7 @@ function toggleProgress(teacherId, classId, studentId) {
                 </p>`;
             }
 
-            // Exibir todas as notas
+            // Exibir notas como estava antes
             let notaIndex = 0;
             while (unitSnap.child(`nota${notaIndex}`).exists()) {
               const notaValue = unitSnap.child(`nota${notaIndex}`).val();
@@ -566,7 +570,7 @@ function toggleProgress(teacherId, classId, studentId) {
               </div>`;
           });
 
-          // Barra de progresso para o nível
+          // Calcular e exibir o progresso do nível
           const progressPercentage = Math.round((totalCompletedPhases / totalPhasesInLevel) * 100);
           progressHTML += `
             <div>
