--- a/painel_professor.html
+++ b/painel_professor.html
@@ -516,10 +516,6 @@ function toggleProgress(teacherId, classId, studentId) {
           // Adicionar o título do nível
           progressHTML += `<h3>LEVEL ${level}</h3>`;
 
-          // Barra de progresso do nível
-          const levelProgressContainer = document.createElement('div');
-          const levelProgressPercentage = document.createElement('p');
-
           Object.keys(structure[levelKey]).forEach(unitKey => {
             const totalPhases = structure[levelKey][unitKey];
             const unitSnap = snapshot.child(`${levelKey}/${unitKey}`);
@@ -546,7 +542,7 @@ function toggleProgress(teacherId, classId, studentId) {
                 </p>`;
             }
 
-            // Exibir notas como estava antes
+            // Exibir notas dentro da unidade
             let notaIndex = 0;
             while (unitSnap.child(`nota${notaIndex}`).exists()) {
               const notaValue = unitSnap.child(`nota${notaIndex}`).val();
