--- a/painel_professor.html
+++ b/painel_professor.html
@@ -495,7 +495,7 @@ const structure = {
 
 function toggleProgress(teacherId, classId, studentId) {
   const progressContainer = document.getElementById(`progress-container-${studentId}`);
-  
+
   if (progressContainer.style.display === 'none' || progressContainer.style.display === '') {
     progressContainer.style.display = 'block';
     progressContainer.innerHTML = '<p>Loading...</p>';
@@ -509,6 +509,10 @@ function toggleProgress(teacherId, classId, studentId) {
           let totalCompletedPhases = 0;
           let totalPhasesInLevel = 0;
 
+          // Adiciona o título da Level e a barra de progresso
+          progressHTML += `<h3>LEVEL ${level}</h3>`;
+
+          // Calcula o progresso geral da Level
           Object.keys(structure[levelKey]).forEach(unitKey => {
             const totalPhases = structure[levelKey][unitKey];
             const unitSnap = snapshot.child(`${levelKey}/${unitKey}`);
@@ -534,7 +538,7 @@ function toggleProgress(teacherId, classId, studentId) {
                 </p>`;
             }
 
-            // Adicionar as notas, se existirem
+            // Exibe as notas dentro da Unit
             let notaIndex = 0;
             while (unitSnap.child(`nota${notaIndex}`).exists()) {
               const notaValue = unitSnap.child(`nota${notaIndex}`).val();
@@ -545,6 +549,7 @@ function toggleProgress(teacherId, classId, studentId) {
             }
 
             totalPhasesInLevel += totalPhases;
+            totalCompletedPhases += completedPhases;
 
             progressHTML += `
               <div>
@@ -568,7 +573,7 @@ function toggleProgress(teacherId, classId, studentId) {
               </div>
             </div>`;
         });
-        
+
         progressHTML += '</div>';
         progressContainer.innerHTML = progressHTML;
       } else {
