--- a/painel_professor.html
+++ b/painel_professor.html
@@ -495,7 +495,7 @@ const structure = {
 
 function toggleProgress(teacherId, classId, studentId) {
   const progressContainer = document.getElementById(`progress-container-${studentId}`);
-
+  
   if (progressContainer.style.display === 'none' || progressContainer.style.display === '') {
     progressContainer.style.display = 'block';
     progressContainer.innerHTML = '<p>Loading...</p>';
@@ -509,10 +509,6 @@ function toggleProgress(teacherId, classId, studentId) {
           let totalCompletedPhases = 0;
           let totalPhasesInLevel = 0;
 
-          // Adiciona o título da Level e a barra de progresso
-          progressHTML += `<h3>LEVEL ${level}</h3>`;
-
-          // Calcula o progresso geral da Level
           Object.keys(structure[levelKey]).forEach(unitKey => {
             const totalPhases = structure[levelKey][unitKey];
             const unitSnap = snapshot.child(`${levelKey}/${unitKey}`);
@@ -538,18 +534,18 @@ function toggleProgress(teacherId, classId, studentId) {
                 </p>`;
             }
 
-            // Exibe as notas dentro da Unit
-            let notaIndex = 0;
-            while (unitSnap.child(`nota${notaIndex}`).exists()) {
-              const notaValue = unitSnap.child(`nota${notaIndex}`).val();
-              notesHTML += `
-                <p>Your Test Score ${notaIndex + 1}: <span style="font-weight: bold; color: ${notaValue >= 70 ? 'blue' : 'red'};">${notaValue}</span>
-                <button onclick="clearIndividualTestScore('${studentId}', '${levelKey}', '${unitKey}', 'nota${notaIndex}')">Clear Score</button></p>`;
-              notaIndex++;
-            }
+            // Adicionar as notas, se existirem, verificando todas as chaves que começam com "nota"
+            unitSnap.forEach(childSnap => {
+              if (childSnap.key.startsWith('nota')) {
+                const notaValue = childSnap.val();
+                notesHTML += `
+                  <p>Your Test Score ${noteCount}: <span style="font-weight: bold; color: ${notaValue >= 70 ? 'blue' : 'red'};">${notaValue}</span>
+                  <button onclick="clearIndividualTestScore('${studentId}', '${levelKey}', '${unitKey}', '${childSnap.key}')">Clear Score</button></p>`;
+                noteCount++;
+              }
+            });
 
             totalPhasesInLevel += totalPhases;
-            totalCompletedPhases += completedPhases;
 
             progressHTML += `
               <div>
@@ -559,7 +555,8 @@ function toggleProgress(teacherId, classId, studentId) {
                   ${phasesHTML}
                   ${notesHTML || '<p>No scores available</p>'}
                 </div>
-              </div>`;
+              </div>
+            `;
           });
 
           const progressPercentage = Math.round((totalCompletedPhases / totalPhasesInLevel) * 100);
@@ -571,9 +568,10 @@ function toggleProgress(teacherId, classId, studentId) {
                   <span style="position: absolute; color: white; padding-left: 5px;">${progressPercentage}%</span>
                 </div>
               </div>
-            </div>`;
+            </div>
+          `;
         });
-
+        
         progressHTML += '</div>';
         progressContainer.innerHTML = progressHTML;
       } else {
