--- a/painel_professor.html
+++ b/painel_professor.html
@@ -509,70 +509,50 @@ function toggleProgress(teacherId, classId, studentId) {
           let totalCompletedPhases = 0;
           let totalPhasesInLevel = 0;
 
-          // Adicionar o título "LEVEL X" antes das unidades
-          progressHTML += `<h4>LEVEL ${level}</h4>`;
-
+          // Calculando o progresso total do Level
           Object.keys(structure[levelKey]).forEach(unitKey => {
             const totalPhases = structure[levelKey][unitKey];
             const unitSnap = snapshot.child(`${levelKey}/${unitKey}`);
             
-            let completedPhases = 0;
-            let phasesHTML = '';
-            let notesHTML = '';
-            let noteCount = 1;
-
             for (let phaseNumber = 1; phaseNumber <= totalPhases; phaseNumber++) {
               const phaseKey = `fase${phaseNumber}`;
               const phaseSnap = unitSnap.child(phaseKey);
               const isComplete = phaseSnap.exists() && phaseSnap.val();
 
               if (isComplete) {
-                completedPhases++;
+                totalCompletedPhases++;
               }
-
-              phasesHTML += `
-                <p>Phase ${phaseNumber}: 
-                  <input type="checkbox" ${isComplete ? 'checked' : ''} 
-                    onchange="updatePhaseStatus('${studentId}', '${levelKey}', '${unitKey}', '${phaseKey}', this.checked)">
-                </p>`;
             }
 
-            // Adicionar as notas, se existirem
-            unitSnap.forEach(childSnap => {
-              if (childSnap.key.startsWith('nota')) {
-                const notaValue = childSnap.val();
-                notesHTML += `
-                  <p>Your Test Score ${noteCount}: <span style="font-weight: bold; color: ${notaValue >= 70 ? 'blue' : 'red'};">${notaValue}</span>
-                  <button onclick="clearIndividualTestScore('${studentId}', '${levelKey}', '${unitKey}', '${childSnap.key}')">Clear Score</button></p>`;
-                noteCount++;
-              }
-            });
-
-            totalCompletedPhases += completedPhases;
             totalPhasesInLevel += totalPhases;
+          });
 
-            // Barra de progresso entre "LEVEL X" e Units
-            const progressPercentage = Math.round((totalCompletedPhases / totalPhasesInLevel) * 100);
-            progressHTML += `
-              <div class="progress-bar-container" style="margin-bottom: 10px;">
-                <div class="progress-bar-fill" style="width: ${progressPercentage}%; background-color: #4CAF50;">
-                  <span style="position: absolute; color: white; padding-left: 5px;">${progressPercentage}%</span>
-                </div>
-              </div>`;
+          // Calculando a porcentagem de progresso do nível
+          const progressPercentage = Math.round((totalCompletedPhases / totalPhasesInLevel) * 100);
 
+          // Adicionar o título "LEVEL X" e a barra de progresso
+          progressHTML += `
+            <h4>LEVEL ${level}</h4>
+            <div class="progress-bar-container" style="margin-bottom: 10px;">
+              <div class="progress-bar-fill" style="width: ${progressPercentage}%; background-color: #4CAF50;">
+                <span style="position: absolute; color: white; padding-left: 5px;">${progressPercentage}%</span>
+              </div>
+            </div>
+          `;
+
+          // Gerando os botões das Units para o nível atual
+          Object.keys(structure[levelKey]).forEach(unitKey => {
             progressHTML += `
               <div>
                 <button onclick="toggleVisibility('${studentId}-${unitKey}')">Unit ${unitKey.replace('Unit', '')}</button>
                 <div id="${studentId}-${unitKey}" style="display: none; margin-left: 20px;">
-                  <p>${completedPhases}/${totalPhases} phases completed</p>
-                  ${phasesHTML}
-                  ${notesHTML || '<p>No scores available</p>'}
+                  ${structure[levelKey][unitKey]} phases
                 </div>
               </div>
             `;
           });
         });
-        
+
         progressHTML += '</div>';
         progressContainer.innerHTML = progressHTML;
       } else {
