--- a/painel_professor.html
+++ b/painel_professor.html
@@ -171,24 +171,19 @@
 }
 
 .progress-bar-container {
+  width: 25%; /* 1/4 do tamanho total */
   background-color: #ddd;
-  border-radius: 5px;
-  width: 100%;
-  height: 10px;
-  margin: 10px 0; /* Espaçamento ao redor */
-  position: relative;
+  border-radius: 15px;
+  padding: 3px;
+  margin: 10px auto; /* Centralizar a barra */
+  box-shadow: 0px 0px 3px #000; /* Sombra leve para efeito */
 }
 
 .progress-bar-fill {
-  height: 100%;
-  background-color: #4CAF50; /* Cor verde para representar o progresso */
-  border-radius: 5px;
-  text-align: center;
-  color: white;
-  font-size: 0.8em;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  height: 20px;
+  background-color: #4CAF50;
+  border-radius: 12px; /* Bordas arredondadas */
+  transition: width 0.4s ease; /* Animação suave ao carregar */
 }
   </style>
 </head>
