--- a/painel_professor.html
+++ b/painel_professor.html
@@ -545,7 +545,7 @@ function toggleProgress(teacherId, classId, studentId) {
             totalCompletedPhases += completedPhases;
             totalPhasesInLevel += totalPhases;
 
-            // Adicionar unidade com fases e notas
+            // Gerando os botões das Units com suas fases e notas
             progressHTML += `
               <div>
                 <button onclick="toggleVisibility('${studentId}-${unitKey}')">Unit ${unitKey.replace('Unit', '')}</button>
@@ -558,7 +558,7 @@ function toggleProgress(teacherId, classId, studentId) {
             `;
           });
 
-          // Calculando e exibindo a barra de progresso para o nível
+          // Calculando a porcentagem de progresso do nível e exibindo a barra de progresso e o título do nível
           const progressPercentage = Math.round((totalCompletedPhases / totalPhasesInLevel) * 100);
           progressHTML += `
             <h4>LEVEL ${level}</h4>
