--- a/painel_professor.html
+++ b/painel_professor.html
@@ -558,16 +558,16 @@ function toggleProgress(teacherId, classId, studentId) {
             `;
           });
 
-          // Calculando a porcentagem de progresso do nível e exibindo a barra de progresso e o título do nível
+          // Calculando a porcentagem de progresso do nível e exibindo o título e barra de progresso antes das unidades
           const progressPercentage = Math.round((totalCompletedPhases / totalPhasesInLevel) * 100);
-          progressHTML += `
+          progressHTML = `
             <h4>LEVEL ${level}</h4>
             <div class="progress-bar-container">
               <div class="progress-bar-fill" style="width: ${progressPercentage}%; background-color: #4CAF50;">
                 <span style="position: absolute; color: white; padding-left: 5px;">${progressPercentage}%</span>
               </div>
             </div>
-          `;
+          ` + progressHTML;
         });
 
         progressHTML += '</div>';
