--- a/painel_professor.html
+++ b/painel_professor.html
@@ -505,6 +505,7 @@ function toggleProgress(teacherId, classId, studentId) {
           let totalPhasesInLevel = 0;
 
           // Calculando o progresso total do Level
+          let unitHTML = ''; // Armazena HTML de cada unidade para esse nível
           Object.keys(structure[levelKey]).forEach(unitKey => {
             const totalPhases = structure[levelKey][unitKey];
             const unitSnap = snapshot.child(`${levelKey}/${unitKey}`);
@@ -545,8 +546,8 @@ function toggleProgress(teacherId, classId, studentId) {
             totalCompletedPhases += completedPhases;
             totalPhasesInLevel += totalPhases;
 
-            // Gerando os botões das Units com suas fases e notas
-            progressHTML += `
+            // HTML de cada unidade
+            unitHTML += `
               <div>
                 <button onclick="toggleVisibility('${studentId}-${unitKey}')">Unit ${unitKey.replace('Unit', '')}</button>
                 <div id="${studentId}-${unitKey}" style="display: none; margin-left: 20px;">
@@ -558,16 +559,17 @@ function toggleProgress(teacherId, classId, studentId) {
             `;
           });
 
-          // Calculando a porcentagem de progresso do nível e exibindo o título e barra de progresso antes das unidades
+          // Calculando a porcentagem de progresso do nível e adicionando o título e a barra de progresso antes das unidades
           const progressPercentage = Math.round((totalCompletedPhases / totalPhasesInLevel) * 100);
-          progressHTML = `
+          progressHTML += `
             <h4>LEVEL ${level}</h4>
             <div class="progress-bar-container">
               <div class="progress-bar-fill" style="width: ${progressPercentage}%; background-color: #4CAF50;">
                 <span style="position: absolute; color: white; padding-left: 5px;">${progressPercentage}%</span>
               </div>
             </div>
-          ` + progressHTML;
+            ${unitHTML} <!-- Adiciona todas as unidades deste nível -->
+          `;
         });
 
         progressHTML += '</div>';
