--- a/painel_professor.html
+++ b/painel_professor.html
@@ -598,10 +598,15 @@ function toggleProgress(teacherId, classId, studentId) {
     }
   }
 
-  function closeProgress(studentId) {
-    const progressContainer = document.getElementById(`progress-container-${studentId}`);
-    progressContainer.style.display = 'none';
-  }
+function closeProgress(studentId) {
+   console.log(`Fechando progresso para o aluno ID: ${studentId}`);
+   const progressContainer = document.getElementById(`progress-container-${studentId}`);
+   if (progressContainer) {
+       progressContainer.style.display = 'none';
+   } else {
+       console.error(`Elemento progress-container-${studentId} não encontrado.`);
+   }
+}
 
     function updatePhaseStatus(studentId, level, unit, phase, isComplete) {
       const progressRef = db.ref(`usuarios/${studentId}/progresso/${level}/${unit}/${phase}`);
