--- a/painel_professor.html
+++ b/painel_professor.html
@@ -188,14 +188,25 @@
 
 .close-button {
     position: absolute;
-    top: 10px;
-    right: 10px;
-    background-color: transparent;
+    top: 8px;
+    right: 8px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
     border: none;
-    font-size: 24px;
-    color: red;
+    border-radius: 50%;
+    font-size: 18px;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
-  }
+    transition: background-color 0.3s ease;
+}
+
+.close-button:hover {
+    background-color: rgba(0, 0, 0, 0.7);
+}
   </style>
 </head>
 <body>
