--- a/painel_professor.html
+++ b/painel_professor.html
@@ -171,19 +171,24 @@
 }
 
 .progress-bar-container {
-  width: 25%; /* 1/4 do tamanho total */
-  background-color: #ddd;
-  border-radius: 15px;
-  padding: 3px;
-  margin: 10px auto; /* Centralizar a barra */
-  box-shadow: 0px 0px 3px #000; /* Sombra leve para efeito */
+    width: 80%; /* ajustado conforme necessário */
+    background-color: #e0e0e0; /* Cor de fundo */
+    border-radius: 15px;
+    padding: 3px;
+    margin: 10px auto;
+    box-shadow: 0px 0px 3px #000;
 }
 
 .progress-bar-fill {
-  height: 20px;
-  background-color: #4CAF50;
-  border-radius: 12px; /* Bordas arredondadas */
-  transition: width 0.4s ease; /* Animação suave ao carregar */
+    height: 20px;
+    background-color: #4CAF50; /* Cor principal */
+    border-radius: 12px;
+    transition: width 0.4s ease;
+    color: white; /* Cor do texto */
+    text-align: center;
+    line-height: 20px;
+    font-weight: bold;
+    font-size: 14px;
 }
 
 .close-button {
