--- a/painel_professor.html
+++ b/painel_professor.html
@@ -191,6 +191,19 @@
     font-size: 14px;
 }
 
+.progress-bar-fill.low {
+    background-color: #e57373; /* vermelho claro */
+    color: white;
+}
+.progress-bar-fill.medium {
+    background-color: #fff176; /* amarelo claro */
+    color: black;
+}
+.progress-bar-fill.high {
+    background-color: #81c784; /* verde claro */
+    color: white;
+}
+
 .close-button {
     position: absolute;
     top: 8px;
@@ -588,10 +601,12 @@ function toggleProgress(teacherId, classId, studentId) {
                     });
 
                     const progressPercentage = Math.round((totalCompletedPhases / totalPhasesInLevel) * 100);
+                    const colorClass = progressPercentage < 25 ? 'low' : progressPercentage < 75 ? 'medium' : 'high';
+                    
                     progressHTML += `
                         <h4>LEVEL ${level}</h4>
                         <div class="progress-bar-container">
-                            <div class="progress-bar-fill" style="width: ${progressPercentage}%; background-color: #4CAF50;">
+                            <div class="progress-bar-fill ${colorClass}" style="width: ${progressPercentage}%;">
                                 <span style="position: absolute; color: white; padding-left: 5px;">${progressPercentage}%</span>
                             </div>
                         </div>
