--- a/painel_aluno.html
+++ b/painel_aluno.html
@@ -263,6 +263,7 @@ function loadProgress(studentId) {
           totalPhasesInLevel += totalPhases;
         });
 
+        // Calcular a porcentagem de progresso do Level
         const progressPercentage = Math.round((totalCompletedPhases / totalPhasesInLevel) * 100);
         let colorClass = '';
         if (progressPercentage < 25) {
@@ -273,6 +274,7 @@ function loadProgress(studentId) {
           colorClass = 'high';
         }
 
+        // Adicionar título do Level e a barra de progresso com estilo
         progressHTML += `<h2>Level ${level}</h2>`;
         progressHTML += `
           <div class="progress-bar-container">
