--- a/painel_aluno.html
+++ b/painel_aluno.html
@@ -233,6 +233,7 @@
         }
 
      // Função para carregar o progresso do aluno
+// Função para carregar o progresso do aluno
 function loadProgress(studentId) {
   const progressContainer = document.getElementById('progress-container');
   const progressRef = db.ref(`usuarios/${studentId}/progresso`);
@@ -263,7 +264,6 @@ function loadProgress(studentId) {
           totalPhasesInLevel += totalPhases;
         });
 
-        // Calcular a porcentagem de progresso do Level
         const progressPercentage = Math.round((totalCompletedPhases / totalPhasesInLevel) * 100);
         let colorClass = '';
         if (progressPercentage < 25) {
@@ -274,7 +274,6 @@ function loadProgress(studentId) {
           colorClass = 'high';
         }
 
-        // Adicionar título do Level e a barra de progresso com estilo
         progressHTML += `<h2>Level ${level}</h2>`;
         progressHTML += `
           <div class="progress-bar-container">
